Добавлен второй экран и реализован переход через интент_резалт

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.i7.analogclock"
-        minSdkVersion 17
+        applicationId "com.example.i7_4770k.myapplication"
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
