--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.i7.analogclock">
+    package="com.example.i7_4770k.myapplication">
 
     <application
         android:allowBackup="true"
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ChangeActivity"
+            android:label="@string/title_activity_change"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
